--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,2 @@
-async-timeout==4.0.2
-certifi==2021.10.8
-click==8.1.2
-Deprecated==1.2.13
-distlib==0.3.4
-dnspython==2.2.1
-email-validator==1.2.1
-filelock==3.6.0
-Flask==2.1.1
-Flask-And-Redis==1.0.0
-flask-mongoengine==1.0.0
-Flask-PyMongo==2.3.0
-Flask-WTF==1.0.1
-idna==3.3
-itsdangerous==2.1.2
-Jinja2==3.1.1
-MarkupSafe==2.1.1
-mongoengine==0.24.1
-packaging==21.3
-platformdirs==2.5.2
-pymongo==4.1.1
-pyparsing==3.0.8
-pytube==12.0.0
-redis==4.2.2
-six==1.16.0
-virtualenv==20.14.1
-Werkzeug==2.1.1
-wrapt==1.14.1
-WTForms==3.0.1
+flask
+pymongo
